force-app/main/default/objects/T_qtc_Active_Credit_Memo_Lines_Header__c/fields/Amount_without_currency_symbol__c.field-meta.xml
<CustomField>
    <fullName>Amount_without_currency_symbol__c</fullName>
    <label>Amount without currency symbol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>