force-app/main/default/objects/T_qtc_Active_Credit_Memo_Lines_Header__c/fields/Item_Rate__c.field-meta.xml
<CustomField>
    <fullName>Item_Rate__c</fullName>
    <label>Item Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>