force-app/main/default/objects/T_qtc_Active_Credit_Memo_Lines_Header__c/fields/Memo_1__c.field-meta.xml
<CustomField>
    <fullName>Memo_1__c</fullName>
    <label>Memo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>