force-app/main/default/objects/T_qtc_Active_Credit_Memo_Lines_Header__c/fields/OSA_TEXT_for_vlookup__c.field-meta.xml
<CustomField>
    <fullName>OSA_TEXT_for_vlookup__c</fullName>
    <label>OSA TEXT for vlookup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>