force-app/main/default/objects/T_qtc_Active_Credit_Memo_Lines_Header__c/fields/POCheck_Number__c.field-meta.xml
<CustomField>
    <fullName>POCheck_Number__c</fullName>
    <label>PO/Check Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>