force-app/main/default/objects/T_qtc_Active_Credit_Memo_Lines_Header__c/fields/Reference_ID_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Reference_ID_Bundle__c</fullName>
    <label>Reference ID Bundle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>