force-app/main/default/objects/T_qtc_Active_Credit_Memo_Lines_Header__c/fields/T_OSAMatched__c.field-meta.xml
<CustomField>
    <fullName>T_OSAMatched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>T_OSAMatched?</label>
    <type>Checkbox</type>
</CustomField>