force-app/main/default/objects/T_qtc_Active_Credit_Memo_Lines_Header__c/fields/VAT_Code__c.field-meta.xml
<CustomField>
    <fullName>VAT_Code__c</fullName>
    <label>VAT Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>