force-app/main/default/objects/T_qtc_Active_Credit_Memo_Lines_Header__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OSA_TEXT_for_vlookup__c</columns>
    <columns>Billing_StateProvince__c</columns>
    <columns>Billing_Addressee__c</columns>
    <columns>Shipping_Addressee__c</columns>
    <columns>Shipping_Attention__c</columns>
    <columns>Shipping_Address_2__c</columns>
    <columns>Billing_Attention__c</columns>
    <columns>Account_ID__c</columns>
    <columns>Amount_Foreign_Currency__c</columns>
    <columns>Item_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>